[tool.poetry]
name = "analseq"
version = "0.1.0"
description = "Tools for the course Analyse de Sequences"
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
biopython = "^1.78"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
